# kafka-rust

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENCE  README.md  TODO.md  build.rs  deny.toml  dprint.json  rustfmt.toml  typos.toml
.github/workflows/: rust.yml
examples/: console-consumer.rs  console-producer.rs  consume.rs  example-compression.rs  example-consume.rs  example-fetch.rs  example-produce.rs  example-ssl.rs  fetch.rs  metadata.rs  offset-monitor.rs  produce.rs  publish.rs  topic-metadata.rs
src/: client.rs  client_internals.rs  codecs.rs  compression.rs  connection.rs  consumer.rs  crc32.rs  error.rs  gzip.rs  lib.rs  main.rs  producer.rs  protocol.rs  rules.rs  snappy.rs  tcp.rs  utils.rs  zconsumer.rs
src/client/: metadata.rs  mod.rs  network.rs  state.rs
src/compression/: gzip.rs  lz4.rs  mod.rs  snappy.rs  zstandard.rs
src/consumer/: assignment.rs  builder.rs  config.rs  mod.rs  state.rs
src/protocol/: api_key.rs  consumer.rs  consumer_int.rs  decoder.rs  encoder.rs  error.rs  fetch.rs  fetch_int.rs  fetch_req.rs  list_offset.rs  metadata.rs  mod.rs  offset.rs  produce.rs  zfetch.rs  zreader.rs
test-data/: README.md  fetch1.mytopic.1p.gzip.kafka.0821  fetch1.mytopic.1p.nocompression.kafka.0821  fetch1.mytopic.1p.snappy.kafka.0821  fetch1.mytopic.1p.snappy.kafka.0822  fetch1.snappy.chunked.4k  fetch1.txt  fetch2.mytopic.nocompression.invalid_crc.kafka.0900  fetch2.mytopic.nocompression.kafka.0900  fetch2.txt
tests/: .env  do_until_success  docker-compose.yml  docker.sh  run-all-tests  test_kafka.rs
tests/integration/client/: mod.rs
tests/integration/consumer_producer/: compression.rs  consumer.rs  mod.rs  producer.rs
tests/kafka-new/: Dockerfile  docker-compose.yml  generate_certs.sh  run-all-tests  ssl.properties  start-kafka.sh
tests/kafka-new/secrets/: ca.crt  ca.key  ca.srl  kafka.broker.crt  kafka.broker.csr  kafka.broker.key  kafka.broker.keystore.jks  kafka.broker.p12  kafka.broker.truststore.jks
tests/kafka-rust-image/: Dockerfile  client-ssl.properties  create-topics.sh  download-kafka.sh  secure.server.properties  server.properties  start-kafka.sh
