[package]
name = "kafka"
version = "0.9.0"
authors = ["Yousuf Fauzan", "Petr Novotnik <pnovotnik@googlemail.com>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/kafka/"
edition = "2021"
keywords = ["kafka", "queue"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kafka-rust/kafka-rust"
description = "Rust client for Apache Kafka"

[dependencies]
byteorder = "1.4.3"
crc = "3.0.0"
fnv = "1.0.7"
ref_slice = "1.2.1"
twox-hash = "1.6.3"

flate2 = { version = "1.0.23", optional = true }
openssl = { version = "0.10.40", optional = true }
openssl-sys = { version = "0.9.73", optional = true }
snap = { version = "1.0.5", optional = true }
thiserror = "1.0.31"
tracing = "0.1.34"

[dev-dependencies]
getopts = "0.2.21"
tracing-subscriber = "0.3"
time = "0.3.7"
rand = "0.8.5"
lazy_static = "1.4.0"
anyhow = "1.0.55"

[features]
default = ["snappy", "gzip", "security"]
snappy = ["snap"]
gzip = ["flate2"]
security = ["openssl", "openssl-sys"]
nightly = []
integration_tests = []
