[package]
name = "kafka"
version = "0.10.0"
authors = ["John Ward", "John Ward <john@johnward.net>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/kafka/"
edition = "2021"
keywords = ["kafka", "queue"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kafka-rust/kafka-rust"
description = "Rust client for Apache Kafka"

[dependencies]
byteorder = "1.5"
crc = "3.2"
fnv = "1.0.7"
ref_slice = "1.2.1"
twox-hash = "1.6.3"

flate2 = { version = "1.0", optional = true }
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
snap = { version = "1.1", optional = true }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
getopts = "0.2.21"
tracing-subscriber = "0.3"
time = "0.3"
rand = "0.8.5"
lazy_static = "1.5"
anyhow = "1.0"

[features]
default = ["snappy", "gzip", "security"]
snappy = ["snap"]
gzip = ["flate2"]
security = ["openssl", "openssl-sys"]
nightly = []
integration_tests = []
